Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.6.1 - 7/11/2012 - Arnold Bailey
- Display Shipping Option and Shipping Sub Option next to shipping cost on Order Manage Page.
- Added shipping method to the SHIPPINGINFO in email. If mp_shipping_info['method'] not yet set from actual shipping, displays the customer's choice.


2.6.0 - 6/6/2012 - Aaron Edwards/Paul Menard
----------------------------------------------------------------------
- Added support for per Product and variation custom fields for personalization
- Allow shortcodes to work in custom page messages
- Fix issue with Stripe payment gateway JS conflict. http://premium.wpmudev.org/forums/topic/marketpress-problem-cant-finish-checking-out
- Fix an issue with numbered tags showing all products
- Bug fixes with $content argument in mp_product template function/shortcode
- Wrap prev/next nav links in wrapper for styling

2.5.9 - 5/5/2012 - Aaron Edwards/Arnold
----------------------------------------------------------------------
- Fix problems with USPS shipping module
- Fix stripslashes issue with widget custom content
- Fix issues with single product shortcode attributes

2.5.8 - 4/26/2012 - Aaron Edwards
----------------------------------------------------------------------
- Improvements to coupon handling in PayPal Express gateway
- Add cart details to PayPal Express gateway paypal history
- Fix a bug in chained payments gateway not filling shipping/tax totals
- Internationalize various date strings on the order status pages
- Add UTF-8 BOM to csv exports http://premium.wpmudev.org/forums/topic/export-orders-csv-character-support

2.5.7 - 4/16/2012 - Aaron Edwards
----------------------------------------------------------------------
- Fix issues with PayPal chained payments gateway for sure