@@ -6,9 +6,11 @@ Change Log:
 ----------------------------------------------------------------------
 
 2.6.1 - 7/11/2012 - Arnold Bailey
+----------------------------------------------------------------------
 - Display Shipping Option and Shipping Sub Option next to shipping cost on Order Manage Page.
 - Added shipping method to the SHIPPINGINFO in email. If mp_shipping_info['method'] not yet set from actual shipping, displays the customer's choice.
-
+- Fix email filtering for manual payments gateway
+- Change order of 'mp_new_order' hook
 
 2.6.0 - 6/6/2012 - Aaron Edwards/Paul Menard
 ----------------------------------------------------------------------
